UX/Bugfix: Stop model preview image from clipping over footer

--- a/assets/stylesheets/host.css
+++ b/assets/stylesheets/host.css
@@ -18,14 +18,7 @@
 }
 
 .top-section {
-  height:  50%;
-  padding: 50px;
-}
-
-.bottom-section {
-  background-color: var(--light-gray);
-  height:           50%;
-  padding-top:      50px;
+  padding: 70px 50px 0 50px;
 }
 
 .activity-text-full {
@@ -132,11 +125,16 @@
   padding:       2px;
 }
 
-.horizontal-divider {
-  background-color: var(--medium-blue);
-  border:           3px solid var(--medium-blue);
-  margin:           25px 0 0 0;
-  width:            100vw;
+.footer {
+  background-color: var(--light-gray);
+  border-top:       7px solid var(--medium-blue);
+  position:         fixed;
+  left:             0;
+  bottom:           0;
+  width:            100%;
+  height:           250px;
+  padding-top:      50px;
+  z-index:          20;
 }
 
 .form-input-wrapper {
